# stuurman-desktop

./: .gitignore  .travis.yml  README.md  autogen.sh  configure.ac
data/: Makefile.am  stuurman-desktop-pref.desktop.in  stuurman-desktop-preferences.desktop.in  stuurman-desktop.desktop
data/ui/: Makefile.am  desktop-pref.glade  desktop-pref.ui
po/: POTFILES.in
src/: Makefile.am  app-config.c  app-config.h  cell-placement-generator.h  desktop-manager.c  desktop-manager.h  desktop-ui.c  desktop.c  desktop.h  pcmanfm.c  pcmanfm.h  pref.c  pref.h  single-inst.c  utils.h  wallpaper-manager.c  wallpaper-manager.h  window-tracker.c  window-tracker.h
